--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "lucide-react": "^0.474.0",
+    "papaparse": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
